services/proxx/k8s/overlays/local-kind/proxx-api-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxx-api
spec:
  type: NodePort
  ports:
    - name: http
      port: 8789
      targetPort: api
      nodePort: 30089
