services/proxx/k8s/overlays/local-kind/proxx-web-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxx-web
spec:
  type: NodePort
  ports:
    - name: http
      port: 5174
      targetPort: web
      nodePort: 30174
